[package]
name = "nips_conversations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ollama-rs = "0.1.6"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.7"
async-trait = "0.1"
walkdir = "2.3"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
symphonia = { version = "0.5", features = ["mp3"] }
